# candela-3

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/linux/: Dockerfile  devcontainer.json
.devcontainer/wsl/: Dockerfile  devcontainer.json  llvm-questing.list  llvm.gpg
.github/actions/build-linux/: action.yml
.github/actions/build-windows/: action.yml
.github/workflows/: build.yml
apps/candela-3/: CMakeLists.txt  main.cpp
apps/candela-3/args/: args.cpp  args.cppm
apps/candela-3/renderer/: renderer.cppm  vulkan_command.cpp  vulkan_device.cpp  vulkan_instance.cpp  vulkan_pipeline.cpp  vulkan_renderer.cpp  vulkan_swapchain.cpp  vulkan_utils.cpp
apps/candela-3/shaders/: shader.slang
apps/candela-3/version/: generate_auto_version.bat  version.cpp  version.cppm
apps/sandbox/: CMakeLists.txt  main.cpp  test_std.cppm
libs/core/: CMakeLists.txt
libs/core/configuration/: configuration.cppm  configuration_node.cpp  configuration_node.cppm  list_node.cpp  list_node.cppm  literal_node.cpp  literal_node.cppm  object_node.cpp  object_node.cppm  object_node_iterator.cpp  object_node_iterator.cppm  object_node_types.cppm
libs/core/configuration/parser/: json_configuration_parser.cpp  parser.cppm
libs/core/environment/: manager.cppm
libs/core/factory/: factory.cppm
libs/core/plugin/: plugin.cppm
libs/core/system/: shared_library.cpp  shared_library.cppm  shared_library.h
libs/core/util/: fps_counter.cpp  util.cpp  util.cppm
libs/core/window/: glfw_window.cpp  window.cppm
version/: generate_auto_version.sh  version.cpp
